--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -332,7 +332,7 @@ nav.hendrio_menu span {
 .hendrio_menu ul .sub-menu .sub-menu li:hover>a,
 .hendrio_menu ul .sub-menu .sub-menu .sub-menu li:hover>a,
 .hendrio_menu ul .sub-menu .sub-menu .sub-menu .sub-menu li:hover>a {
-    background: #da242b;
+    background: #e44d26;
     color: #fff !important;
 }
 
@@ -447,7 +447,7 @@ ul.sub-menu li:hover a span{
 
 .sero-content h4 {
     font-size: 16px;
-    color: #cd0d14;
+    color: #e44d26;
     text-transform: uppercase;
     font-weight: 500;
     padding: 0 0 12px;
@@ -458,10 +458,11 @@ ul.sub-menu li:hover a span{
     line-height: 65px;
     font-weight: 800;
     color: #152b63;
+    text-transform: uppercase;
 }
 
 .sero-content h1 span {
-    color: #cd0d14;
+    color: #e44d26;
 }
 
 p.hero-desc {
@@ -522,7 +523,7 @@ p.hero-desc {
 
 .hendrio-section-title h4 {
     font-size: 16px;
-    color: #da242b;
+    color: #e44d26;
     text-transform: uppercase;
     font-weight: 500;
     padding-bottom: 8px;
@@ -539,7 +540,7 @@ h1.sections {
 }
 
 .hendrio-section-title h1 span {
-    color: #da242b;
+    color: #e44d26;
 }
 
 .hendrio-section-title p {
@@ -2004,7 +2005,7 @@ span.check-arrow i {
 .blog-content {
     padding: 32px 35px 25px;
     transition: .5s;
-    background: #f5f8fe;
+    background: #fcfcfc;
     border-radius: 0 0 50px 5px;
 }
 
@@ -2043,7 +2044,7 @@ h2.blog-title a {
     top: 0;
     bottom: 0;
     right: 0;
-    background: #da242b;
+    background: #f16529;
     border-radius: 5px 30px 30px 30px;
     z-index: -1;
     transform: scale(0);
@@ -2346,7 +2347,7 @@ span.contact-text2 {
 }
 
 .contact-informations:hover h2.contact-title, .contact-informations:hover span.contact-text, .contact-informations:hover span.contact-text2 {
-    color: #fff;
+    color: black;
 }
 
 
@@ -4778,6 +4779,7 @@ p.description {
 h2.call-title {
     font-size: 30px;
     color: #fff;
+    font-family: 'Montserrat';
 }
 
 span.call-desc {
@@ -7196,7 +7198,7 @@ h3{
     font-family: 'bristone';
 }
 h4{
-    font-family: 'bristone';
+    font-family: 'Montserrat';
 }
 h5{
     font-family: 'bristone';
